fix(examples): 消除 Flink Kryo 依赖,适配 JDK 17+ 强封装
生产报错:org.apache.flink.api.common.InvalidProgramException:
  Kryo 序列化 Arrays$ArrayList 等 JDK 内部实现时,反射访问 java.util
  内部字段抛 InaccessibleObjectException(module java.base does not
  "opens java.util"),与数据内容无关,JDK 25 环境必现。

根因:Flink 自动分析 POJO 时,Map/List 接口字段被推断为 GenericTypeInfo
  → 落入 Kryo → Kryo Chill 序列化器反射访问 JDK 内部实现 → JDK 17+
  强封装禁止 → 初始化即失败。

修复(代码层消除 Kryo,不依赖 --add-opens 兜底):
- 所有 Flink POJO 加 @TypeInfo(xxx.Factory.class),显式声明 Flink 原生
  序列化器(Types.POJO + 各字段 Types.*/Types.MAP/Types.LIST):
  - KafkaRecord / PromSample(含 ParsedSeries/ParsedSample)
  - SampleWithMeta / AggResult / MetricAggState
- 每个类提供 typeInfo() + Factory 内部类,供 TypeExtractor 自动推导复用
- PromSample 构造器:Collections.emptyList() → new ArrayList<>(空列表),
  避免 Arrays$ArrayList 内部实现被 Kryo 反射
- MetricAggFunctionTest:Arrays.asList() → new ArrayList<>(包装),同理
- Agg5mJob.fromSource:显式传 KafkaRecord.typeInfo(),不再走自动推导

部署文档(--add-opens 兜底):
- docs/operations/production/06-flink-deployment.md
- docs/operations/prom-gw-operations-guide.md
  env.java.opts.all 追加 12 个 --add-opens 参数覆盖 java.base 下
  所有关键包,防止其他作业/字段意外落入 Kryo 时不至于全挂
  同时保留 G1GC 参数